<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="@drawable/popup_dialog_bg" >
  
    <TextView 
        android:id="@+id/textview_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_addr"
        android:textColor="#FFFFFFFF"
        />
    <TextView 
        android:id="@+id/textview_catnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_catnum"
        android:textColor="#FFFFFFFF"
        />
    <TextView 
        android:id="@+id/textview_lastfeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_lastfeed"
        android:textColor="#FFFFFFFF"
        />
    <TextView 
        android:id="@+id/textview_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_detail"
        android:textColor="#FFFFFFFF"
        />
</LinearLayout>
