<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_city"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_city"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_city"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spin_city"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/label_posttime"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_posttime"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_posttime"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/label_age"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_age"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_age"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_age"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_age"
            android:inputType="text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/label_sex"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_sex"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_sex"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_sex"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sex"
            android:inputType="text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/label_health"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_health"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_health"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_health"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_health"
            android:inputType="text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/label_adopt_condition"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_condition"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_adopt_condition"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_adopt_condition"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_adopt_condition"
            android:inputType="text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/label_contactinfo"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_contactinfo"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             >

            <EditText
                android:id="@+id/edit_host"
                style="@style/Standard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/hint_host"
                android:inputType="text" 
                android:visibility="gone"/>

            <EditText
                android:id="@+id/edit_contact"
                style="@style/Standard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_contact"
                android:inputType="text" 
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             >

            <TextView
                android:id="@+id/text_host"
                style="@style/Standard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" 
                android:visibility="gone"/>

            <TextView
                android:id="@+id/text_contact"
                style="@style/Standard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_adopt_moreinfo"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_moreinfo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_adopt_moreinfo"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_adopt_moreinfo"
            style="@style/Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:gravity="top|left"
            android:hint="@string/hint_moreinfo"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="3"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>